--- a/client/src/css/layouts/navbar.less
+++ b/client/src/css/layouts/navbar.less
@@ -215,7 +215,7 @@ nav {
 	padding: 10px;
 	text-align: right;
 
-	.medium-device({ width: ~"calc(100% - 80px)"; left: 80px });
+	//.medium-device({ width: ~"calc(100% - 80px)"; left: 80px });
 	.small-device ({ width: 100%; left: 0 });
 	.smallest-device({ width: 100%; left: 0 });
 
